--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,13 @@
-site_name: MkDocs Test Documentation
-site_description: Test project with Github Pages
+site_name: My Project Documentation
+site_description: A detailed description of my project
 theme: material
 
 nav:
-  - Home: index.md
-  - About: about.md
+  - Главная страница: index.md
+  - Обзор: overview.md
+  - Начало работы: getting-started.md
+  - Аутентификация и авторизация: auth.md
+  - Примеры использования API: examples.md
+  - История изменений: changelog.md
+  - Контакты: contacts.md
+  - Глоссарий: glossary.md
