--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
   - Обзор: overview.md
   - Начало работы: getting-started.md
   - Аутентификация и авторизация: auth.md
+  - Справочник API: swagger-ui/index.html
   - Примеры использования API: examples.md
   - История изменений: changelog.md
   - Контакты: contacts.md
